k3s/wallos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallos
  labels:
    app: wallos
