k3s/wallos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: wallos
  labels:
    app: wallos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallos
  template:
    metadata:
      labels:
        app: wallos
    spec:
      containers:
        - name: wallos
          image: bellamy/wallos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/html/db
              subPath: db
            - name: logos
              mountPath: /var/www/html/images/uploads/logos
              subPath: logos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallos-data
        - name: logos
          persistentVolumeClaim:
            claimName: wallos-data
