k3s/wallos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos
  namespace: wallos
  labels:
    app: wallos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wallos.k3s.dawo9889-homelab.ovh
      secretName: wildcard-k3s-dawo9889-homelab-ovh-tls
  rules:
    - host: wallos.k3s.dawo9889-homelab.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallos
                port:
                  number: 80
